removed link from second book title

--- a/main.html
+++ b/main.html
@@ -35,9 +35,7 @@
             <div class ="main-page-book-review">
                 <img class="book-cover"
                 src="https://mks.io/impractical-python-projects.jpg">
-                <h2 class="book-title">
-                    <a href="detail.html">Impractical Python Projects</a>
-                </h2>
+                <h2 class="book-title">Impractical Python Projects</h2>
                 <div class="book-rating">4.5 stars</div>
                 <div class="book-authors">by Lee Vaughan</div>
                 <h3>Summary</h3>
